[package]
name = "click_and_load"
version = "0.0.2"
authors = ["Danyel Bayraktar <cydrop@gmail.com>"]

license = "MIT"
description = "Click and Load v2 implementation"
repository = "https://github.com/muja/click_and_load.rs"

[dependencies]
iron = "*"
router = "*"
urlencoded = "*"
rust-crypto = "*"
rustc-serialize = "*"
hyper = "*"
duktape_ffi = "*"
log = "*"

[dev-dependencies]
env_logger = "*"
